[gd_scene load_steps=3 format=3 uid="uid://cc770yabkc7yn"]

[ext_resource type="Theme" uid="uid://6gmli02g6m3k" path="res://resources/themes/main_menu.tres" id="1_38nb1"]
[ext_resource type="Script" path="res://MainMenu.gd" id="1_djkuw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_38nb1")
script = ExtResource("1_djkuw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.481553, 0.519357, 0.927885, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -307.0
offset_right = 362.0
offset_bottom = 418.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ScenesAsTilesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Scenes as Tiles"

[node name="AnimatedTileButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Animated Tiles"

[node name="ShowGridButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Grid"

[node name="CustomDataButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Custom Data"

[node name="Area2DButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Area2D"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ScenesAsTilesButton" to="." method="_on_scenes_as_tiles_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/AnimatedTileButton" to="." method="_on_animated_tile_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ShowGridButton" to="." method="_on_show_grid_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CustomDataButton" to="." method="_on_custom_data_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Area2DButton" to="." method="_on_custom_data_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
